<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome_text" />

    <Button
        android:id="@+id/responsive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/find_button"
        android:layout_centerInParent="true"
        android:onClick="responsive"
        android:text="@string/responsive" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="304dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/responsive"
        android:layout_centerInParent="true" />

    <EditText
        android:id="@+id/num_primes_to_find"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:imeOptions="actionDone"
        android:gravity="top|center"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/drive_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="52dp"
        android:onClick="uploadToDrive"
        android:text="@string/drive_upload" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/drive_upload"
        android:layout_below="@+id/progressBar"
        android:isScrollContainer="false" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/output"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text=""
                android:textColor="#AA0000"
                android:textIsSelectable="true" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/find_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/responsive"
        android:layout_below="@+id/num_primes_to_find"
        android:layout_marginTop="10dp"
        android:text="@string/find_button" />

    <Button
        android:id="@+id/clear_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/responsive"
        android:layout_alignTop="@+id/find_button"
        android:onClick="cancel"
        android:text="@string/clear_button" />

    <Button
        android:id="@+id/graph_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/graph_button"
        android:onClick="showGraph" />

</RelativeLayout>